--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run generate && next build",
+    "generate": "npx ts-node ./scripts/generate.ts",
     "start": "next start",
     "lint": "next lint"
   },
@@ -41,6 +42,6 @@
     "typescript": "^5"
   },
   "overrides": {
-    "@langchain/core": "0.1.20"
+    "@langchain/core": "0.1.24"
   }
 }
